@startuml
' *************** Entités de la structure de l'organisation ***************

class Organisation {
  - name : String
  - universites : List<Universite>
}

class Universite {
  - name : String
  - departements : List<Departement>
  - responsable : User
}

class User {
  - id : String
  - name : String
  - phone : String
  - email : String
  - password : String
  - role : String "USER, ADMIN, TEACHER, DELEGATE, SUPERVISOR"
  - subjects : List<Course>
  - programme : Programme
}

class Departement {
  - name : String
  - programs : List<Programme>
}

class Programme {
  - name : String
  - subjects : List<Course>
}

class AcademicYear {
  - periode : String  "ex: 2024-2025"
}

' **** Cours ou Matière ****
class Course {
  - name : String
  - volumeHoraire : int
}

' *************** Entités liées aux cours et à l'émargement ***************

class ClassSession {
  - date : Date
  - heureDebut : Time
  - heureFin : Time
  - academicYear : AcademicYear
  - subject : Course
  - professor : User
  - classRepresentative : User
}

' *************** Autres entités ***************

class Emargement {
  - id : String
  - createdAt : DateTime
  - status : String  "En attente, Présent, Signalé absent"
  - classSession : ClassSession
  - professor : User
}

class Notification {
  - id : String
  - createdAt : DateTime
  - message : String
  - status : String  "Envoyée, Confirmée"
  - emargement : Emargement
  - recipient : User
}

' *************** Associations ***************

Organisation "1" -- "1..*" Universite : contient
Universite "1" -- "1..*" Departement : comprend
Departement "1" -- "1..*" Programme : offre
Programme "1" -- "1..*" Course : propose
Universite "1" -- "1" User : gérée_par

ClassSession "1" -- "1" AcademicYear : planifiée_dans
ClassSession "1" -- "1" Course : concerne
ClassSession "1" -- "1" User : donné_par
ClassSession "1" -- "1" User : validée_par


Emargement "1" -- "1" ClassSession : appartient_à
Emargement "1" -- "1" User : concerne

Notification "1" -- "1" Emargement : déclenchée_par
Notification "1" -- "1" User : adressée_à

User "0..*" -- "1" Programme : inscrit_dans

@enduml
